[QOLDEV-268] fix section nav heading length
- Retain padding-right so the heading doesn't extend too far

--- a/src/assets/_project/_blocks/layout/section-nav/_section-nav.scss
+++ b/src/assets/_project/_blocks/layout/section-nav/_section-nav.scss
@@ -5,6 +5,7 @@
   margin-bottom: 4rem;
   h2 {
     border-bottom: 2px solid $qg-dark-grey;
+    padding: 0 1rem 0 0;
     color: #000;
     margin-top: 1.9rem;
     margin-bottom: 0;
